[package]

name = "ndarray"
version = "0.12.1"
authors = [
  "bluss",
  "Jim Turner"
]
license = "MIT/Apache-2.0"
readme = "README-crates.io.md"

repository = "https://github.com/rust-ndarray/ndarray"
documentation = "https://docs.rs/ndarray/"

description = "An n-dimensional array for general elements and for numerics. Lightweight array views and slicing; views support chunking and splitting."

keywords = ["array", "data-structure", "multidimensional", "matrix", "blas"]
categories = ["data-structures", "science"]

build = "build.rs"

exclude = ["docgen/images/*"]

[lib]
name = "ndarray"
bench = false
test = true

[dependencies]
num-traits = "0.2"
num-complex = "0.2"
itertools = { version = "0.7.0", default-features = false }

rayon = { version = "1.0.3", optional = true }

# Use via the `blas` crate feature!
cblas-sys = { version = "0.1.4", optional = true, default-features = false }
blas-src = { version = "0.2.0", optional = true, default-features = false }

matrixmultiply = { version = "0.2.0" }
# Use via the `serde-1` crate feature!
serde = { version = "1.0", optional = true }

[dev-dependencies]
defmac = "0.2"
quickcheck = { version = "0.7.2", default-features = false }
rawpointer = "0.1"
lazy_static = "1"

[features]
# Enable blas usage
# See README for more instructions
blas = ["cblas-sys", "blas-src"]

# Serde 1.0
serde-1 = ["serde"]

# These features are used for testing
test-blas-openblas-sys = ["blas"]
test = ["test-blas-openblas-sys"]

# This feature is used for docs
docs = ["serde-1", "rayon"]

[profile.release]
[profile.bench]
debug = true

[workspace]
members = ["parallel", "ndarray-rand", "serialization-tests", "blas-tests"]
exclude = ["numeric-tests"]

[package.metadata.release]
no-dev-version = true

[package.metadata.docs.rs]
features = ["docs"]
