[package]
name = "blas-tests"
version = "0.1.0"
authors = ["bluss"]
publish = false

[lib]
test = false

[dev-dependencies]
ndarray = { path = "../", features = ["blas"] }
blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
defmac = "0.2"
num-traits = "0.2"

