[package]
name = "ndarray-rand"
version = "0.16.0"
edition = "2018"
authors = ["bluss"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/rust-ndarray/ndarray"
documentation = "https://docs.rs/ndarray-rand/"
readme = "README.md"

description = "Constructors for randomized arrays. `rand` integration for `ndarray`."

keywords = ["multidimensional", "matrix", "rand", "ndarray"]

include = [
  "/src/**/*.rs",
  "LICENSE-MIT",
  "LICENSE-APACHE",
  "RELEASES.md",
  "README.rst",
]

[dependencies]
ndarray = { workspace = true }

rand = { workspace = true }
rand_distr = { workspace = true }
quickcheck = { workspace = true, optional = true }

[dev-dependencies]
rand_isaac = "0.4.0"
quickcheck = { workspace = true }

[package.metadata.release]
tag-name = "ndarray-rand-{{version}}"
