[package]
name = "numeric-tests"
version = "0.1.0"
authors = ["bluss"]
publish = false

[dependencies]
ndarray = { path = ".." }
ndarray-rand = { path = "../ndarray-rand/" }
rand = "0.3"

[lib]
test = false

[features]
test_blas = ["ndarray/blas", "ndarray/blas-openblas-sys"]

[profile.dev]
opt-level = 2
[profile.test]
opt-level = 2
