[package]
name = "numeric-tests"
version = "0.1.0"
authors = ["bluss"]
publish = false

[dependencies]
approx = "0.4"
ndarray = { path = "..", features = ["approx"] }
ndarray-rand = { path = "../ndarray-rand/" }
rand_distr = "0.3"

[dependencies.rand]
version = "0.7.0"
features = ["small_rng"]

[lib]
test = false

[features]
test_blas = ["ndarray/blas", "ndarray/test-blas-openblas-sys"]

[profile.dev]
opt-level = 2
[profile.test]
opt-level = 2
