[package]
name = "ndarray-parallel"
version = "0.9.0"
authors = ["bluss"]
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ndarray/ndarray"
documentation = "https://docs.rs/ndarray-parallel/"

description = "Parallelization for ndarray (using rayon)."

keywords = ["data-structure", "multidimensional", "parallel", "concurrent"]
categories = ["data-structures", "science", "concurrency"]

[dependencies]
rayon = "1.0"
ndarray = { version = "0.12.0", path = "../", features = ["rayon"]}

[dev-dependencies]
approx = "0.3.2"
num_cpus = "1.2"
itertools = { version = "0.8.0", default-features = false }

[package.metadata.release]
no-dev-version = true
