[package]
name = "serialization-tests"
version = "0.1.0"
authors = ["bluss"]
publish = false

[lib]
test = false

[dependencies]
ndarray = { path = "../", features = ["serde-1"] }
ron = { version = "0.1.1", optional = true }

[features]
default = ["ron"]

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
rmp-serde = "0.13.1"