[package]
name = "blas-tests"
version = "0.1.0"
authors = ["bluss"]
publish = false

[lib]
test = false

[dev-dependencies]
ndarray = { path = "../", features = ["approx", "blas"] }

approx = "0.4"
defmac = "0.2"
num-traits = "0.2"

blas-src = { version = "0.7.0", features = ["openblas"] }
openblas-src = { version = "0.9.0", features = ["system"] }

#blas-src = { version = "0.7.0", features = ["netlib"] }
#netlib-src = { version = "0.8.0", default-features = false, features = ["cblas", "system"] }

#blas-src = { version = "0.7.0", features = ["blis"] }
#blis-src = { version = "0.2.0", features = ["system"] }
