[package]
name = "serialization-tests"
version = "0.1.0"
authors = ["bluss"]
publish = false

[lib]
test = false

[dependencies]
ndarray = { path = "..", features = ["serde"] }

[features]
default = ["ron"]

[dev-dependencies.serde]
version = "1.0.100"
default-features = false

[dev-dependencies.serde_json]
version = "1.0.40"

[dev-dependencies.rmp-serde]
version = "0.14.0"

[dependencies.ron]
version = "0.5.1"
optional = true
