[package]
name = "serialization-tests"
version = "0.1.0"
authors = ["bluss"]
publish = false

[lib]
test = false

[dependencies]
ndarray = { path = "..", features = ["serde"] }

[features]
default = ["ron"]

[dev-dependencies.serde]
version = "1.0.100"
default-features = false

[dev-dependencies.serde_json]
version = "1.0.40"

[dev-dependencies.rmp]
# Old version to work with Rust 1.64+
version = "=0.8.10"

[dev-dependencies.rmp-serde]
# Old version to work with Rust 1.64+
version = "0.14"

[dependencies.ron]
version = "0.8.1"
optional = true
