[package]
name = "bincode-store-tests"
version = "0.1.0"
authors = ["MiyakoMeow"]
publish = false
edition = "2018"

[lib]
test = false
doc = false
doctest = false

[dependencies]
ndarray = { workspace = true, features = ["bincode"] }

bincode = { version = "2" }

[dev-dependencies]
# >=0.8.11 to avoid rmp-serde security vulnerability
# <0.8.14 to allows MSRV 1.64.0
rmp = { version = ">=0.8.11,<0.8.14" }
# Old version to work with Rust 1.64+
rmp-serde = { version = ">=1.1.1" }
