[package]
name = "blas-mock-tests"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
test = false
doc = false
doctest = false

[dependencies]
cblas-sys = { workspace = true }

[dev-dependencies]
ndarray = { workspace = true, features = ["approx", "blas"] }
ndarray-gen = { workspace = true }
itertools = { workspace = true }

# Config for cargo-release
[package.metadata.release]
release = false
