[package]
name = "numeric-tests"
version = "0.1.0"
authors = ["bluss"]
publish = false
edition = "2018"

[lib]
test = false
doc = false
doctest = false

[dependencies]
ndarray = { workspace = true, features = ["approx"] }
ndarray-rand = { workspace = true }

approx = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

blas-src = { optional = true, version = "0.10", default-features = false, features = ["openblas"] }
openblas-src = { optional = true, version = ">=0.10.11", default-features = false, features = ["cblas", "system"] }

half = { optional = true, version = "2.7.1", default-features = false, features = ["num-traits", "rand_distr"] }

[dev-dependencies]
num-traits = { workspace = true }
num-complex = { workspace = true }

[features]
test_blas = ["ndarray/blas", "blas-src", "openblas-src"]
half = ["dep:half", "ndarray/half"]

# Config for cargo-release
[package.metadata.release]
release = false
